--- a/report.html
+++ b/report.html
@@ -193,6 +193,7 @@
           <li class="list-group-item">File:</li>
           <li class="list-group-item">Path:</li>
           <li class="list-group-item">Dimensione in byte:</li>
+          <li class="list-group-item">SHA256 Hash:</li>
           <li class="list-group-item">Codifica delle stringhe:</li>
         </ul>
         <br><br>
